Started to create unit tests for controller